[tool.poetry]
name = "plxtool"
version = "0.1.0"
description = "Tool for Paperless-ngx"
authors = ["Sebastian Stark <sstark@mailbox.org>"]
readme = "README.md"

[tool.poetry.scripts]
plxtool = 'plxtool.cli:cliRun'

[tool.poetry.dependencies]
python = "^3.11"
pypaperless = "^3.1.15"
prompt-toolkit = "^3.0.48"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
